// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compare functions should return 3 kidergardens with highset build date (ST) 1`] = `
Array [
  id: 1 build date: 2008-01-26T15:52:14+02:00 www: string,
  id: 2 build date: 2020-09-29T07:58:57+03:00 www: string,
  id: 3 build date: 2005-03-21T00:25:34+02:00 www: string,
  id: 4 build date: 2017-07-29T22:50:34+03:00 www: string,
  id: 5 build date: 2001-09-24T21:18:54+03:00 www: string,
  id: 6 build date: 2002-01-19T15:05:34+02:00 www: string,
  id: 7 build date: 2008-09-14T04:25:34+03:00 www: string,
  id: 8 build date: 1998-08-04T21:32:14+03:00 www: string,
  id: 9 build date: 2027-09-19T15:05:34+03:00 www: ,
]
`;

exports[`Compare functions should return 3 kidergardens with highset build date (ST) 2`] = `
Array [
  id: 2 build date: 2020-09-29T07:58:57+03:00 www: string,
  id: 4 build date: 2017-07-29T22:50:34+03:00 www: string,
  id: 7 build date: 2008-09-14T04:25:34+03:00 www: string,
]
`;

exports[`Compare functions should return 3 kidergardens with highset build date (ST) 3`] = `
Array [
  id: 1 build date: 2008-01-26T15:52:14+02:00 www: string,
  id: 2 build date: 2020-09-29T07:58:57+03:00 www: string,
  id: 3 build date: 2005-03-21T00:25:34+02:00 www: string,
  id: 4 build date: 2017-07-29T22:50:34+03:00 www: string,
  id: 5 build date: 2001-09-24T21:18:54+03:00 www: string,
  id: 6 build date: 2002-01-19T15:05:34+02:00 www: string,
  id: 7 build date: 2008-09-14T04:25:34+03:00 www: string,
  id: 8 build date: 1998-08-04T21:32:14+03:00 www: string,
  id: 9 build date: 2027-09-19T15:05:34+03:00 www: ,
]
`;

exports[`Content Component renders correctly 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 2`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 3`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          <a
            href="gardens/3"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 4`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          <a
            href="gardens/3"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          4
        </th>
        <td>
          <a
            href="gardens/4"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 5`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          <a
            href="gardens/3"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          4
        </th>
        <td>
          <a
            href="gardens/4"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          5
        </th>
        <td>
          <a
            href="gardens/5"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 6`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          <a
            href="gardens/3"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          4
        </th>
        <td>
          <a
            href="gardens/4"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          5
        </th>
        <td>
          <a
            href="gardens/5"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          6
        </th>
        <td>
          <a
            href="gardens/6"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 7`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          <a
            href="gardens/3"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          4
        </th>
        <td>
          <a
            href="gardens/4"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          5
        </th>
        <td>
          <a
            href="gardens/5"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          6
        </th>
        <td>
          <a
            href="gardens/6"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          7
        </th>
        <td>
          <a
            href="gardens/7"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 8`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          <a
            href="gardens/3"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          4
        </th>
        <td>
          <a
            href="gardens/4"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          5
        </th>
        <td>
          <a
            href="gardens/5"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          6
        </th>
        <td>
          <a
            href="gardens/6"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          7
        </th>
        <td>
          <a
            href="gardens/7"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          8
        </th>
        <td>
          <a
            href="gardens/8"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Content Component renders correctly 9`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Addres
        </th>
        <th>
          Type
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          1
        </th>
        <td>
          <a
            href="gardens/1"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          2
        </th>
        <td>
          <a
            href="gardens/2"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          3
        </th>
        <td>
          <a
            href="gardens/3"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          4
        </th>
        <td>
          <a
            href="gardens/4"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          5
        </th>
        <td>
          <a
            href="gardens/5"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          6
        </th>
        <td>
          <a
            href="gardens/6"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          7
        </th>
        <td>
          <a
            href="gardens/7"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          8
        </th>
        <td>
          <a
            href="gardens/8"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          9
        </th>
        <td>
          <a
            href="gardens/9"
            onClick={[Function]}
          >
            string
          </a>
        </td>
        <td>
          string
        </td>
        <td>
          string
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
